Move v1 controller and enums